# Orbit

./: README.md  config.py  docker-compose.yml  orbit.py  pyproject.toml
app/: __init__.py  models.py  routes.py
app/main/: forms.py  routes.py
app/task/: __init__.py  models.py  routes.py  service.py
app/templates/: base.html  index.html  login.html  register.html
test/: app_test.py  task_service_test.py  task_test.py
